--- a/ScriptAnimation/ScriptAnimation.css
+++ b/ScriptAnimation/ScriptAnimation.css
@@ -1,5 +1,5 @@
 #image {
-  height: 96px;
-  width: 96px;
-  background: url("Images/linksprites.png") 0px 100px;
+  height: 64px;
+  width: 64px;
+  background: url("Images/test.png") 0px 0px;
 }
